try to fix input placeholders on iphone 6

--- a/style.css
+++ b/style.css
@@ -1195,6 +1195,22 @@
   border: none;
 }
 
+.contact__name::-webkit-input-placeholder, .contact__email::-webkit-input-placeholder {
+  font-family: "Gotham Book", sans-serif;
+}
+
+.contact__name:-ms-input-placeholder, .contact__email:-ms-input-placeholder {
+  font-family: "Gotham Book", sans-serif;
+}
+
+.contact__name:-moz-placeholder, .contact__email:-moz-placeholder {
+  font-family: "Gotham Book", sans-serif;
+}
+
+.contact__name::-moz-placeholder, .contact__email::-moz-placeholder {
+  font-family: "Gotham Book", sans-serif;
+}
+
 .footer-wrapper {
   background-image: url(./images/footer/bg.jpg);
   height: 525px;
